rewrite methodology section in the report

--- a/report/bibliografia/webs.bib
+++ b/report/bibliografia/webs.bib
@@ -144,3 +144,10 @@
   url = {https://towardsdatascience.com/cross-entropy-loss-function-f38c4ec8643e},
   urldate = {2022-06-23}
 }
+
+@online{taming-transformers-github,
+  title = {Taming Transformers for High-Resolution Image Synthesis - GitHub},
+  author = {Esser, Patrick and Rombach, Robin and Ommer, Bjorn},
+  url = {https://github.com/CompVis/taming-transformers},
+  urldate = {2022-02-23}
+}
