--- a/report/capitulos/01_Introduccion.tex
+++ b/report/capitulos/01_Introduccion.tex
@@ -9,26 +9,20 @@ La química es una de las ciencias que se ha impregnado de este desarrollo tecno
 \section{Motivación del proyecto}
 Desde hace décadas, en el mundo de la química ha estado presente la necesidad de almacenar, gestionar y procesar la gran cantidad de información que se genera. Con el tiempo se fueron desarrollando técnicas de tratamiento de ésta, pero no fue hasta hace algunos años cuando se acuñó el nombre de cheminformatics o chemoinformatics. 
 
-En la literatura existen diferentes definiciones para este término, discutidas en \cite{doi:10.1021/ci600234z}. \\
-``Chem(o)informatics es un término genérico que encompasa el diseño, creación, gestión, recuperación, análisis, diseminación, visualización y el uso de información química'' es una de las definiciones recogidas. Otra más abierta es ``La aplicación de métodos informáticos para resolver problemas de química''. 
+En la literatura existen diferentes definiciones para este término, discutidas en \cite{doi:10.1021/ci600234z}. ``Chem(o)informatics es un término genérico que encompasa el diseño, creación, gestión, recuperación, análisis, diseminación, visualización y el uso de información química'' es una de las definiciones recogidas. Otra más abierta es ``La aplicación de métodos informáticos para resolver problemas de química''. 
 
 % TODO: para qué necesitan los científicos de Negev un clasificador de imágenes?
 Desde la Universidad de Granada, la tutora de este TFG trabaja en este ámbito. Colabora con químicos de la Universidad de Negev y es consciente de los problemas que tienen para manejar la gran cantidad de datos que aparecen en publicaciones científicas. Un tipo de datos muy valioso son las imágenes, pero clasificarlas no es trivial: pueden ser sobre cualquier temática, algunas pueden referirse a esquemas explicando cómo funciona un modelo, otras pueden contener resultados de algún experimento, pueden ser representaciones de compuestos químicos, etc. Clasificarlas manualmente por un operario no es una opción viable, ya que se consumirían demasiados recursos en una tarea que actualmente se puede automatizar.
 
-Otra necesidad que tienen estos científicos es la de conseguir más imágenes: etiquetarlas de forma manual es una tarea tediosa.
+Es por ello que en este Trabajo de Fin de Grado vamos a crear un modelo que permita clasificar imágenes. En concreto, aquellas que contienen representaciones de moléculas del resto. Este tipo de imágenes de moléculas en ocasiones son difíciles de clasificar, debido al parecido que presentan con otras estructuras. Por ello, también entrenaremos un clasificador con un \textit{dataset} que contiene \textit{hard negatives}, ejemplos negativos que están en el límite de lo que es una imagen de una molécula química y lo que no. Crearemos estos \textit{hard negatives} a partir de un modelo generativo capaz de sintetizar imágenes.
 
-Es por ello que en este Trabajo de Fin de Grado vamos a crear dos utilidades, un generador de imágenes sintéticas (tanto de imágenes de moléculas como de ejemplos negativos) y un modelo que permita clasificar imágenes. En concreto, aquellas que son representaciones de moléculas organometálicas, del resto.
 
-Aunque existen diferentes opiniones sobre el alcance de las cheminformatics, se puede considerar que este proyecto está dentro de sus fronteras, ya que vamos a crear una herramienta de clasificación de imágenes químicas, es decir, una herramienta que procesa y analiza este tipo de información.
+Aunque existen diferentes opiniones sobre el alcance de las \textit{cheminformatics}, se puede considerar que este proyecto está dentro de sus fronteras, ya que vamos a crear una herramienta de clasificación de imágenes químicas, es decir, una herramienta que procesa y analiza este tipo de información.
 
 \section{Objetivos}
 El proyecto tiene como fin cumplir los siguientes objetivos:
 
 \begin{itemize}
-    \item \textbf{[OBJ1]} Crear un conjunto de datos para clasificar compuestos organometálicos.
-    \begin{itemize}
-        \item \textbf{[OBJ1.1]} Generar imágenes sintéticas de compuestos químicos.
-        \item \textbf{[OBJ1.2]} Generar imágenes sintéticas de compuestos no químicos.
-    \end{itemize}
-    \item \textbf{[OBJ2]} Clasificar imágenes que presentan compuestos organometálicos de aquellas que no.
+    \item \textbf{[OBJ1]} Refinar un \textit{dataset} de clasificación de imágenes de compuestos químicos ya existente.
+    \item \textbf{[OBJ2]} Clasificar imágenes que presentan compuestos químicos de aquellas que no.
 \end{itemize}
