report experiments up to hard negative generation

--- a/report/bibliografia/webs.bib
+++ b/report/bibliografia/webs.bib
@@ -151,3 +151,17 @@
   url = {https://github.com/CompVis/taming-transformers},
   urldate = {2022-02-23}
 }
+
+@online{computer-graphics-epfl,
+  title = {Introduction to Computer Graphics - EPFL},
+  author = {Geometric Computing Laboratory},
+  url = {https://github.com/CompVis/taming-transformers},
+  urldate = {Curso 2020/2021}
+}
+
+@online{computer-graphics-epfl,
+  title = {What's the Optimal Batch Size to Train a Neural Network?},
+  author = {Ayush Thakur},
+  url = {https://wandb.ai/ayush-thakur/dl-question-bank/reports/What-s-the-Optimal-Batch-Size-to-Train-a-Neural-Network---VmlldzoyMDkyNDU},
+  urldate = {2022-05-26}
+}
